--- a/Source/genny/genny.BL/genny.BL.csproj
+++ b/Source/genny/genny.BL/genny.BL.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\genny.Interfaces\genny.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
