--- a/Source/genny/genny.BL.Tests/genny.BL.Tests.csproj
+++ b/Source/genny/genny.BL.Tests/genny.BL.Tests.csproj
@@ -16,4 +16,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\genny.BL\genny.BL.csproj" />
+  </ItemGroup>
+
 </Project>
